Added titles to html

--- a/gamejam.html
+++ b/gamejam.html
@@ -22,6 +22,7 @@
 		.menu_div a:hover{color:#E4E4E4;}
 		.menu_div a:visited:hover {color:#E4E4E4;}
 	</style>
+	<title>Joel Groff - Game Jam</title>
 </head>
 
 <body>	
