--- a/western.html
+++ b/western.html
@@ -10,6 +10,7 @@
 		.column_two {width:40%;}
 		.column_three {width:60%;}
 	</style>
+	<title>Joel Groff - Sci-fi Western</title>
 </head>
 
 <body>
