--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 		.menu_div a:hover{color:#E4E4E4;}
 		.menu_div a:visited:hover {color:#E4E4E4;}
 	</style>
+	<title>Joel Groff - About</title>
 </head>
 
 <body>
