--- a/oot.html
+++ b/oot.html
@@ -7,6 +7,7 @@
 		body{background-color:#C7FFF1;}
 		.container{background-color:#C7FFF1; height:650px;}
 	</style>
+	<title>Joel Groff - Oot</title>
 </head>
 
 <body>
