--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,7 @@
 		.container{background-color:#C7FFF1; height:1340px;}
 		#resume_game{width:620px; height:640px; position:relative; padding:20px 0 0 65px; text-align:center;}
 	</style>
+	<title>Joel Groff - Resume</title>
 </head>
 
 <body>
