--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 				These are my projects.
 			</div>
 			<div id="hello_img">
-				<img src="pixel_joel.png" />
+				<img src="pixel_Joel.png" />
 			</div>
 		</div>
 		<div class="column_four_lg">
 			<div class="project_img_link">
-				<img id="resume_capt" src="Resume_capt.png" height="290px" width="290px" />
+				<img id="resume_capt" src="resume_capt.png" height="290px" width="290px" />
 				<a href="resume.html"><br/ ><br /><span class="black_text times_font">RESUME<br />GAME AND PDF</span></a>
 			</div>
 			<br />
