Proof read site, updated resume pdf

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 				<div class="project_column">
 					<span class="header">ABOUT</span>
 					<p>
-						I'm a full-time student at the University of South Florida, 
+						I'm a full-time student at the University of South Florida 
 						pursuing a BS in Computer Science. 
 						I've achieved a 4.0 into my third year.
 					</p>
