--- a/gamejam.html
+++ b/gamejam.html
@@ -37,13 +37,13 @@
 				<div class="project_column">	
 					<span class="header">USF GAME JAM</span>
 					<p><strong>DIRECTIONS</strong>
-					<br />1. Let game finish loading in your browser. 
-					<br />2. Click the game.
-					<br />3. Press space to start.
-					<br />4. Use arrows to move. 
+					<br />1. Let game finish loading in your browser
+					<br />2. Click game
+					<br />3. Press space to start
+					<br />4. Use arrows to move 
 					</p>
 					<p> <strong>GOAL</strong>
-						<br /> Build a fun game within the time limit!
+						<br /> Build a fun game within a time limit!
 					</p>
 					<p><strong>OVERVIEW</strong>
 					<br /> The USF Game Development Club hosted a game jam in fall of 2016. 
@@ -53,7 +53,7 @@
 					<p>Unfortunately, due to work and travel I was only able to 
 					participate in the last hour of the jam.
 					My final game, where players control a square struggling to 
-					survive an onslaught of other angry squares, was entirely created within 
+					survive an onslaught of other squares, was entirely created within 
 					that hour. 
 					</p>
 					</p>	
