--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
 	<title>Joel Groff</title>
+	<!--
+	<script type="text/javascript">
+  		if (screen.width <= 800) 
+		{
+    			window.location = "http://joelgroff.com/mobile_index";
+  		}
+	</script>
+	-->
 </head>
 
 <body>
