--- a/oot.html
+++ b/oot.html
@@ -24,7 +24,7 @@
 					<span class="header">THE TREE OF OOT</span>	
 					<p> 
 						<strong>GOAL</strong>
-						<br /> Build a simple, complete game "from scratch."
+						<br /> Build a simple, complete game from scratch.
 					</p>
 					<p>
 						<strong>OVERVIEW</strong>
