--- a/western.html
+++ b/western.html
@@ -46,8 +46,8 @@
 					<p>
 						The robot's AI is controlled by a finite state machine and makes 
 						decisions based on player location.
-						I introduced a random element to the AI's decisions in order to 
-						provide a sense of newness every battle. 
+						I introduced a random element to the AI's decisions to 
+						provide a sense of surprise every battle. 
 						Hitting the arms or chest damages the boss. 
 					</p>
 					<p>
