--- a/resume.html
+++ b/resume.html
@@ -24,37 +24,38 @@
 		</div>
 		<div id="resume_div" class="center_div times_font grey_text">
 			<strong>DIRECTIONS</strong>
-			<br />1. Wait until game is loaded in browser.
-			<br />2. Click game.
-			<br />3. Move with arrows.
-			<br />4. Select/Shoot with space.
-			<br />5. Esc to return to main menu.
+			<br />1. Wait until game is loaded in browser
+			<br />2. Click game
+			<br />3. Move with arrows
+			<br />4. Select/Shoot with space
+			<br />5. Esc to return to main menu
 			<p>
 				<strong>OVERVIEW</strong>
-				<br />I turned my resume into a video game! It will only require 2 1/2 minutes to play.
-				For the sake of time, a few details have been left out of the resume video game sections.
+				<br />I turned my resume into a video game! It will only require 2 minutes to play.
+				For the sake of time, a few details have been left out of the game version; however, my complete
+				resume PDF can be viewed below.
 			</p>	
-			<p>
-				I would love to hear from you! 
-				You can email me at <strong>GroffJoel@gmail.com</strong>.
-				You can also view or download my resume PDF with the buttons below.
-			</p>
-				<div class="button_div">
-					<a href="JoelGroffCSResume.pdf">VIEW RESUME PDF</a>
-				</div>
-				
-				<br />Safari users may have to alt+click to download the file. 
-			<p>
-				<div class="button_div">
-					<a href="JoelGroffCSResume.pdf" download>DOWNLOAD RESUME PDF</a>
-				</div>
-			</p>
 			<p>
 				<strong>TOOLS</strong>
 				<br />Unity
 				<br />Photoshop
 				<br />C#
 			</p>
+			<p>
+				<strong>EMAIL AND PDF</strong>
+				<br />I would love to hear from you! 
+				You can email me at <strong>GroffJoel@gmail.com</strong>.
+				You can also view or download my resume PDF with the buttons below. Safari users may have to alt+click to download the file. 
+			</p>
+				<div class="button_div">
+					<a href="JoelGroffCSResume.pdf">VIEW RESUME PDF</a>
+				</div>
+			<p>
+				<div class="button_div">
+					<a href="JoelGroffCSResume.pdf" download>DOWNLOAD RESUME PDF</a>
+				</div>
+			</p>
+			
 		</div>
 	</div>
 	<div id="footer">
