Removed Java from skills

--- a/oot.html
+++ b/oot.html
@@ -30,8 +30,7 @@
 						<strong>OVERVIEW</strong>
 						<br /> My first game, The Tree of Oot, is a 2D endless-dodger, where the player controls Oot, a flying squirrel. 
 						Oot can open his wings to slow his fall and better dodge pinecones. 
-						Each successfully dodged pinecone increases the player's score. Video coming soon!
-					</p>
+						Each successfully dodged pinecone increases the player's score.					</p>
 					
 					<p>
 						<strong>TOOLS</strong>
