--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
 	<title>Joel Groff</title>
-	<!--
-	<script type="text/javascript">
-  		if (screen.width <= 800) 
-		{
-    			window.location = "http://joelgroff.com/mobile_index";
-  		}
-	</script>
-	-->
+	<meta name="description" content="Hello, Im a programmer named Joel Groff. These are my projects.">
+	<meta name="keywords" content="Unity,Resume,Portfolio,Computer Science,Student,C++,USF,Game Development,Joel Groff">
+	<meta name="author" content="Joel Groff"
 </head>
 
 <body>
