Added linkedin link to contact

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,13 @@
 				</p>
 			</div>
 			<div class="column_two">
-				
+				<p>
+					<strong>EMAIL</strong>
+					<br />GroffJoel@gmail.com
+				</p>
+				<p>
+					<strong><a href="https://www.linkedin.com/in/joel-groff-97b798138/">LINKEDIN</a></strong>
+				</p>
 			</div>	
 		</div>
 		
