Added icons to contact

--- a/contact.html
+++ b/contact.html
@@ -6,43 +6,47 @@
 	<style type="text/css">
 		body{background-color:#C3F7FF;}
 		.container{background-color:#C3F7FF; height:650px;}
+		.column_two{width:40%; float:left; padding: 15px 0 15px 0;}
+		.column_three{width:60%-25px; float:left; padding: 60px 0 0 25px;}
 	</style>
 </head>
 
 <body>
-	
+
 	<div class="container center_div">
 		<div class="menu_div">
-			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp; 
-			<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;  
+			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp;
+			<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;
 			<a href="contact.html">CONTACT</a>
 		</div>
 		<div class="column_container_two center_div times_font grey_text">
-			<div class="column_two">	
+			<div class="column_two">
 				<span class="header">CONTACT</span>
 				<p>
-					I am interested in software and game development internships this coming Summer 
+					I am interested in software and game development internships this coming Summer
 					2017 and will enter the job market after graduation in May 2018.
 				</p>
 				<p>
-					Please contact me at <strong>GroffJoel@gmail.com</strong> if you would like to learn more about my 
+					Please contact me at <strong>GroffJoel@gmail.com</strong> if you would like to learn more about my
 					experience or how I could help your organization with its next project.
 				</p>
 				<p>
 					I would love to hear from you!
 				</p>
 			</div>
-			<div class="column_two">
+			<div class="column_three">
 				<p>
-					<strong>EMAIL</strong>
-					<br />GroffJoel@gmail.com
+					<a href="https://www.linkedin.com/in/joel-groff-97b798138/">
+						<img src="LinkedInIcon.png" width="50px" /><br /><span class="header">Linkedin</span>
+					</a>
 				</p>
 				<p>
-					<strong><a href="https://www.linkedin.com/in/joel-groff-97b798138/">LINKEDIN</a></strong>
+					<img src="EmailIcon.png" width="50px" />
+					<br /><span class="header">GroffJoel@gmail.com</span>
 				</p>
-			</div>	
+			</div>
 		</div>
-		
+
 	</div>
 	<div id="footer">
 			Copyright 2017&emsp;|&emsp;Site built by Joel Groff
