Added music to resume game

--- a/resume.html
+++ b/resume.html
@@ -26,14 +26,15 @@
 			<strong>DIRECTIONS</strong>
 			<br />1. Wait until game is loaded in browser
 			<br />2. Click game
-			<br />3. Move with arrows
-			<br />4. Select/Shoot with space
-			<br />5. Esc to return to main menu
+			<br />3. Press "m" to mute/unmute
+			<br />4. Move with arrows
+			<br />5. Select/Shoot with "space"
+			<br />6. "Esc" to return to main menu
 			<p>
 				<strong>OVERVIEW</strong>
 				<br />I turned my resume into a video game! It will only require 2 minutes to play.
 				For the sake of time, a few details have been left out of the game version; however, my complete
-				resume PDF can be viewed below.
+				resume PDF can be viewed below. Special thanks to Mostafa Emara for creating the music.
 			</p>	
 			<p>
 				<strong>TOOLS</strong>
