--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 						My skills include:
 					</p>
 					<p>
-						C <br />C# <br />C++<br />Java<br />html<br />CSS
+						C <br />C# <br />C++<br />html<br />CSS
 					</p>
 					<p>
 						Photoshop<br />Unity<br />Blender
