Added game jam 2 to the site.

--- a/gamejam.html
+++ b/gamejam.html
@@ -5,13 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
 	<style type="text/css">
 		.column_two
-		{	
+		{
 			padding:15px 0 15px 0;
 			float:left;
 			width:40%;
 		}
 		.column_three
-		{	
+		{
 			padding:15px 0 15px 0;
 			float:left;
 			width:60%;
@@ -25,51 +25,51 @@
 	<title>Joel Groff - Game Jam</title>
 </head>
 
-<body>	
+<body>
 	<div class="container center_div">
 		<div class="menu_div">
-			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp; 
-			<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;  
+			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp;
+			<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;
 			<a href="contact.html">CONTACT</a>
 		</div>
 		<div class="column_container_two center_div times_font grey_text">
 			<div class="column_two">
-				<div class="project_column">	
-					<span class="header">USF GAME JAM</span>
+				<div class="project_column">
+					<span class="header">GAME JAM 2016</span>
 					<p><strong>DIRECTIONS</strong>
 					<br />1. Let game finish loading in your browser
 					<br />2. Click game
 					<br />3. Press space to start
-					<br />4. Use arrows to move 
+					<br />4. Use arrows to move
 					</p>
 					<p> <strong>GOAL</strong>
 						<br /> Build a fun game within a time limit!
 					</p>
 					<p><strong>OVERVIEW</strong>
-					<br /> The USF Game Development Club hosted a game jam in fall of 2016. 
-					Participants had eight hours to finish their game and were judged 
+					<br /> The USF Game Development Club hosted a game jam in fall of 2016.
+					Participants had eight hours to finish their game and were judged
 					based on UI design, sound, fun, and polish.
-				
-					<p>Unfortunately, due to work and travel I was only able to 
+
+					<p>Unfortunately, due to work and travel I was only able to
 					participate in the last hour of the jam.
-					My final game, where players control a square struggling to 
-					survive an onslaught of other squares, was entirely created within 
-					that hour. 
+					My final game, where players control a square struggling to
+					survive an onslaught of other squares, was entirely created within
+					that hour.
 					</p>
-					</p>	
-					
+					</p>
+
 					<p><strong>TOOLS</strong>
 						<br />Unity
 						<br />C#
 					</p>
 					<p><strong>EXPERIENCE</strong>
-						<br />Coding as fast as possible for one hour	
+						<br />Coding as fast as possible for one hour
 					</p>
 				</div>
 			</div>
 			<div class="column_three">
 				<iframe src="Jam\index.html" width="600px" height="500px"></iframe>
-			</div>	
+			</div>
 		</div>
 	</div>
 	<div id="footer">
@@ -83,7 +83,7 @@
 		<a href="index.html" title="Home">
 			<img id="menu_img" src="Sun_Menu.png" height="40" width="40"/>
 		</a>
-	
+
 	<div id="home_text_shadow" class="home_menu"><strong>H</strong></div>
 	<div id="home_text" class="home_menu"><strong>H</strong></div>
 	</div>
