--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
 
 <div class="container center_div">
-	
+
 	<div class="column_container_four">
 	<div class="menu_div center_div">
-		<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp; 
-		<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;  
+		<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp;
+		<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;
 		<a href="contact.html">CONTACT</a>
 	</div>
 		<div class="column_four_sm">
 			<div id="hello_div">
-				Hello, I'm a 
+				Hello, I'm a
 				programmer named <span class="teal_text">Joel Groff.</span>
 				These are my projects.
 			</div>
@@ -38,13 +38,18 @@
 			<br />
 			<div class="project_img_link">
 				<img id="jam_thumb" src="jam.png" height="290px" width="290px" />
-				<a href="gamejam.html"><br/ ><br /><span class="black_text times_font">USF GAME JAM</span></a>
+				<a href="gamejam.html"><br/ ><br /><span class="black_text times_font">GAME JAM 2016</span></a>
 			</div>
 		</div>
 		<div class="column_four_lg">
 			<div class="project_img_link">
 				<img id="western_thumb" src="sci-fi_western_thumb.png" height="290px" width="290px" />
 				<a href="western.html"><br/ ><br /><span class="black_text times_font">SCI-FI WESTERN</span></a>
+			</div>
+			<br />
+			<div class="project_img_link">
+				<img id="jamTwo_thumb" src="jamTwo.png" height="290px" width="290px" />
+				<a href="JamTwo.html"><br/ ><br /><span class="black_text times_font">GAME JAM 2017</span></a>
 			</div>
 					</div>
 		<div class="column_four_lg">
@@ -54,10 +59,10 @@
 			</div>
 
 		</div>
-		
+
 	</div>
-	
-	
+
+
 </div>
 <div id="footer">
 		Copyright 2017&emsp;|&emsp;Site built by Joel Groff
@@ -70,7 +75,7 @@
 	<a href="index.html" title="Home">
 		<img id="menu_img" src="Sun_Menu.png" height="40" width="40"/>
 	</a>
-	
+
 	<div id="home_text_shadow" class="home_menu"><strong>H</strong></div>
 	<div id="home_text" class="home_menu"><strong>H</strong></div>
 </div>
