--- a/index.html
+++ b/index.html
@@ -33,31 +33,35 @@
 		<div class="column_four_lg">
 			<div class="project_img_link">
 				<img id="resume_capt" src="resume_capt.png" height="290px" width="290px" />
-				<a href="resume.html"><br/ ><br /><span class="black_text times_font">RESUME<br />GAME AND PDF</span></a>
+				<a href="resume.html"><br /><span class="black_text times_font">RESUME<br />(PLAY MY RESUME GAME)</span></a>
 			</div>
 			<br />
-			<div class="project_img_link">
-				<img id="jam_thumb" src="jam.png" height="290px" width="290px" />
-				<a href="gamejam.html"><br/ ><br /><span class="black_text times_font">GAME JAM 2016</span></a>
-			</div>
-		</div>
-		<div class="column_four_lg">
-			<div class="project_img_link">
-				<img id="western_thumb" src="sci-fi_western_thumb.png" height="290px" width="290px" />
-				<a href="western.html"><br/ ><br /><span class="black_text times_font">SCI-FI WESTERN</span></a>
-			</div>
-			<br />
-			<div class="project_img_link">
-				<img id="jamTwo_thumb" src="jamTwo.png" height="290px" width="290px" />
-				<a href="JamTwo.html"><br/ ><br /><span class="black_text times_font">GAME JAM 2017</span></a>
-			</div>
-					</div>
-		<div class="column_four_lg">
 			<div class="project_img_link">
 				<img id="oot_thumb" src="oot.png" height="290px" width="290px" />
 				<a href="oot.html"><br/ ><br /><span class="black_text times_font">THE TREE OF OOT</span></a>
 			</div>
-
+		</div>
+		<div class="column_four_lg">
+			<div class="project_img_link">
+				<img id="astar_thumb" src="AStarThumb.png" height="290px" width="290px" />
+				<a href="AStar.html"><br/ ><span class="black_text times_font">A* PATHFINDING/<br /> PROCEDURAL LEVELS</span></a>
+			</div>
+			<br />
+			<div class="project_img_link">
+				<img id="western_thumb" src="sci-fi_western_thumb.png" height="290px" width="290px" />
+				<a href="western.html"><br/ ><br /><span class="black_text times_font">SCI-FI WESTERN</span></a>
+			</div>
+		</div>
+		<div class="column_four_lg">
+			<div class="project_img_link">
+				<img id="jamTwo_thumb" src="jamTwo.png" height="290px" width="290px" />
+				<a href="JamTwo.html"><br/ ><br /><span class="black_text times_font">GAME JAM 2017<br />(PLAYABLE)</span></a>
+			</div>
+			<br />
+			<div class="project_img_link">
+				<img id="jam_thumb" src="jam.png" height="290px" width="290px" />
+				<a href="gamejam.html"><br/ ><br /><span class="black_text times_font">GAME JAM 2016<br />(PLAYABLE)</span></a>
+			</div>
 		</div>
 
 	</div>
