--- a/oot.html
+++ b/oot.html
@@ -6,32 +6,33 @@
 	<style type="text/css">
 		body{background-color:#C7FFF1;}
 		.container{background-color:#C7FFF1; height:650px;}
+		.column_container_two{width:1100px;}
 	</style>
 	<title>Joel Groff - Oot</title>
 </head>
 
 <body>
-	
+
 	<div class="container center_div">
-		<div class="menu_div"> 
-			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp; 
-			<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;  
+		<div class="menu_div">
+			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp;
+			<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;
 			<a href="contact.html">CONTACT</a>
 		</div>
 		<div class="column_container_two center_div times_font grey_text">
 			<div class="column_two">
 				<div class="project_column">
-					<span class="header">THE TREE OF OOT</span>	
-					<p> 
+					<span class="header">THE TREE OF OOT</span>
+					<p>
 						<strong>GOAL</strong>
 						<br /> Build a simple, complete game from scratch.
 					</p>
 					<p>
 						<strong>OVERVIEW</strong>
-						<br /> My first game, The Tree of Oot, is a 2D endless-dodger, where the player controls Oot, a flying squirrel. 
-						Oot can open his wings to slow his fall and better dodge pinecones. 
+						<br /> My first game, The Tree of Oot, is a 2D endless-dodger, where the player controls Oot, a flying squirrel.
+						Oot can open his wings to slow his fall and better dodge pinecones.
 						Each successfully dodged pinecone increases the player's score.					</p>
-					
+
 					<p>
 						<strong>TOOLS</strong>
 						<br />C++
@@ -46,18 +47,18 @@
 						<br />Random object generation
 						<br />Importing art and linking to objects
 					</p>
-				
+
 				</div>
 			</div>
 			<div class="column_two">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/Ok9P_ltPAGY" frameborder="0" allowfullscreen></iframe>
-			</div>	
+			</div>
 		</div>
 	</div>
 	<div id="footer">
 			Copyright 2017&emsp;|&emsp;Site built by Joel Groff
 	</div>
-	
+
 	<!-- SUN MENU -->
 	<div class="home_menu">
 		<img id="menu_img_back" src="Sun_Menu.png" height="40" width="40"/>
@@ -66,7 +67,7 @@
 		<a href="index.html" title="Home">
 			<img id="menu_img" src="Sun_Menu.png" height="40" width="40"/>
 		</a>
-	
+
 	<div id="home_text_shadow" class="home_menu"><strong>H</strong></div>
 	<div id="home_text" class="home_menu"><strong>H</strong></div>
 	</div>
