--- a/western.html
+++ b/western.html
@@ -25,7 +25,7 @@
 				<div class="project_column">
 					<span class="header">SCI-FI WESTERN</span>
 					<p> <strong>GOAL</strong>
-						<br /> Explore 3D space, 3D collisions, animation, and basic enemy AI
+						<br /> Explore 3D space, 3D collisions, animation, and basic enemy AI.
 					</p>
 					<p><strong>OVERVIEW</strong>
 						<br /> This project is a full 3D level, where the player battles an ancient robot.
