Changed color of a star bg

--- a/AStar.html
+++ b/AStar.html
@@ -4,8 +4,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
 	<style type="text/css">
-		body{background-color:#FFFFCC;}
-		.container{background-color:#FFFFCC;}
+		body{background-color:#99ccc2;}
+		.container{background-color:#99ccc2;}
 		.column_container_two{width:1100px;}
 	</style>
 	<title>Joel Groff - A* Through Procedural Level</title>
@@ -48,7 +48,7 @@
 					 	Pathfinding is based on the Manhattan distance method, in which enemies evalaute the shortest distance to the player based on
 						up/down/left/right cell adjacency. Each step, the algorithm picks the cell with the lowest movement cost and lowest distance from
 						the destination, updating the movement distance of the cells adjacent to the most recently picked cell. I have included a sample
-						of the code, found on the right. 
+						of the code, found on the right.
 					</p>
 					<p><strong>TOOLS</strong>
 						<br />Unity
